# swiftc-svn

branches/0.01/be/: x64cast.h  x64codegen.cpp  x64codegenhelpers.cpp  x64lexer.cpp  x64parser.h
branches/0.01/benchmark/ifelse/cpp/: vec3.cpp.template
branches/0.01/benchmark/ifelse/swift/: vec3.swift.template
branches/0.01/benchmark/vec3add/cpp/: vec3.h.template
branches/0.01/benchmark/vec3cross/cpp/: vec3.cpp.template  vec3_main.cpp.template
branches/0.01/fe/: call.cpp  call.h  class.cpp  class.h  cmdlineparser.h  decl.h  error.cpp  expr.cpp  exprlist.cpp  functioncall.cpp  functioncall.h  lexer.h  main.cpp  module.h  parser.h  scope.cpp  simdprefix.cpp  simdprefix.h  statement.h  syntaxtree.cpp  syntaxtree.h  tuple.h  type.cpp  var.h
branches/0.01/fe/builtin/: gentypes.sh
branches/0.01/me/: basicblock.h  liverangesplitting.h  phiimpl.cpp  ssa.h  stackcoloring.h
branches/0.01/test/: fibonacci.swift
branches/0.01/utils/: disjointsets.cpp  map.h
branches/0.01a/: repair_position.sh
branches/0.01a/be/: x64codegen.h  x64parser.y  x64regalloc.h
branches/0.01a/benchmark/ifelse/cpp/: vec3.h.template
branches/0.01a/benchmark/vec3cross/cpp/: vec3.h.template
branches/0.01a/benchmark/vec3cross/swift/: vec3.swift.template
branches/0.01a/contrib/: swift.vim
branches/0.01a/fe/: class.h  expr.cpp  main.cpp  scope.cpp  scope.h  signature.h  simdprefix.cpp  simdprefix.h  statement.cpp  var.cpp
branches/0.01a/me/: copyinsertion.cpp  defuse.cpp  instrcoalescing.h  livenessanalysis.h  offset.cpp  spiller.h  stackcoloring.cpp  vectorizer.h
branches/0.01a/trunk/: CMakeLists.txt  Doxyfile  mk_clean_benchmark.sh  swiftc
branches/0.01a/trunk/be/: x64typeconv.cpp  x64typeconv.h
branches/0.01a/trunk/fe/: class.cpp  cmdlineparser.cpp  error.h  lexer.l  statement.h  symtab.h  syntaxtree.cpp  tuple.cpp
branches/0.01a/trunk/fe/builtin/: bool.swift
branches/0.01a/trunk/me/: arch.h  cfg.h  codepass.h  coloring.h  instrcoalescing.cpp  livenessanalysis.cpp  offset.h  op.cpp  op.h  phiimpl.h  spiller.cpp  ssa.cpp  vectorizer.cpp
branches/0.01a/trunk/test/: fac.swift  vector.cpp  vector.h  vector.swift
branches/0.01a/trunk/utils/: list.h
branches/0.01a/utils/: assert.h  graph.h  memmgr.h
branches/0.02/: Makefile  README  config.template  stream.ll  type.txt
branches/0.02/benchmark/ifelse/cpp/: vec3_main.cpp.template
branches/0.02/benchmark/vec3add/swift/: vec3.swift.template
branches/0.02/fe/: auto.h  cmdlineparser.h  context.cpp  error.h  fct.h  fctvectorizer.cpp  llvmfctdeclarer.cpp  main.cpp  node.cpp  scope.cpp  sig.h  stmntanalyzer.cpp  stmntcodegen.h  tnlist.h  typenodecodegen.cpp
branches/0.02/fe/builtin/: int_template.swift
branches/0.02/lib/: mat.swift  vec.swift
branches/0.02/test/: box.swift  graphics_pipe.swift  lib.c  mandelbrot.swift  phong_scalar.swift  sdl_gl.swift
branches/0.02/utils/: box.h  graph.h  llvmhelper.cpp  llvmplace.cpp  llvmplace.h  memmgr.cpp
trunk/: CMakeLists.txt  Doxyfile  HACKING  LICENSE  Makefile  README  TODO  alc.cpp  alc.h  assert.cpp  assert.h  class.cpp  class.h  compiler.cpp  compiler.h  config.template  error.cpp  error.h  expr.cpp  expr.h  lc.sh  lexer.h  lexer.l  list.h  main.cpp  mk_benchmark.sh  mk_clean_benchmark.sh  parser.h  parser.y  snippets.cpp  ssa.cpp  ssa.h  statement.cpp  statement.h  stream.ll  swiftc  symboltable.cpp  symboltable.h  syntaxtree.cpp  syntaxtree.h  (+3 more)
trunk/be/: arch.cpp  arch.h  codegenerator.cpp  codegenerator.h  spiller.cpp  spiller.h  x64.cpp  x64.h  x64cast.cpp  x64codegen.cpp  x64codegen.h  x64codegenhelpers.cpp  x64codegenhelpers.h  x64lexer.cpp  x64lexer.h  x64parser.h  x64parser.y  x64phiimpl.cpp  x64phiimpl.h  x64regalloc.cpp  x64regalloc.h
trunk/be/amd64/: spiller.cpp  spiller.h
trunk/be/x86_64/: spiller.cpp  spiller.h
trunk/benchmark/matmul/cpp/: mat.cpp.template  mat_main.cpp.template
trunk/benchmark/vec3add/cpp/: vec3.cpp.template
trunk/contrib/: code.swift  swift.vim  swift.xml  syntax.swift
trunk/fe/: access.cpp  access.h  auto.h  call.cpp  call.h  class.cpp  class.h  classanalyzer.cpp  classanalyzer.h  classcodegen.cpp  classcodegen.h  cmdlineparser.cpp  cmdlineparser.h  context.cpp  context.h  decl.cpp  decl.h  error.cpp  error.h  expr.cpp  expr.h  exprlist.cpp  exprlist.h  fct.cpp  fct.h  fctvectorizer.cpp  fctvectorizer.h  functioncall.cpp  functioncall.h  lexer.h  lexer.l  llvmfctdeclarer.cpp  llvmfctdeclarer.h  llvmtypebuilder.cpp  llvmtypebuilder.h  location.h  main.cpp  memberfunction.cpp  memberfunction.h  method.cpp  (+55 more)
trunk/fe/builtin/: bool.swift  cleantypes.sh  gentypes.sh  int.swift  int_template.swift  real.swift  real_template.swift
trunk/im/: location.h  scope.h  scopetable.cpp  scopetable.h  ssa.cpp  ssa.h
trunk/lib/: math.swift  vec.swift
trunk/me/: arch.cpp  arch.h  basicblock.cpp  basicblock.h  cfg.cpp  cfg.h  coalescing.cpp  coalescing.h  codepass.cpp  codepass.h  coloring.cpp  coloring.h  constpool.cpp  constpool.h  copyinsertion.cpp  copyinsertion.h  defuse.h  defusecalc.cpp  defusecalc.h  forward.h  functab.cpp  functab.h  livenessanalysis.cpp  livenessanalysis.h  liverangesplitting.cpp  liverangesplitting.h  loopsfinder.cpp  loopsfinder.h  offset.cpp  offset.h  op.cpp  op.h  optimizer.cpp  optimizer.h  phiimpl.cpp  phiimpl.h  pseudoreg.cpp  pseudoreg.h  regallocator.cpp  regallocator.h  (+17 more)
trunk/test/: array.swift  box.swift  exp.c  exp.swift  exp_scalar.swift  exp_test.swift  fac.c  fac.swift  fac64.c  fac64.swift  fibonacci.c  fibonacci.swift  graphics_pipe.swift  graphics_pipe_scalar.swift  init.swift  lib.c  mandelbrot.swift  mk_fac.sh  mk_fac64.sh  mk_fib.sh  mk_fibb.sh  phong.swift  phong_scalar.swift  sdl_gl.swift  vector.cpp  vector.swift  vector_main.cpp  vector_show.cpp
trunk/tex/: simd.tex
trunk/utils/: assert.cpp  assert.h  box.h  cast.h  disjointsets.h  graph.h  hashmap.h  leakfinder  list.h  llvmhelper.cpp  llvmhelper.h  llvmplace.cpp  llvmplace.h  memmgr.cpp  memmgr.h  set.h  stringhelper.cpp  stringhelper.h  stringptrcmp.h  types.h
trunk/vec/: typevectorizer.cpp  typevectorizer.h  vectype.cpp
(+3 files in other folders)
